@@ -88,15 +88,14 @@ public class PropertiesUpdate {
             proposedChange.getTags() != null && proposedChange.getTags().getTags().size() == 1,
             "only a single tag must be present in order to perform add workflow tag.");
 
-        // create a new list of tags;
-        TagList currTagList = new TagList(null);
-
         // merge the previous tags if any;
         TagList prevTagList = prevSnapshot.getTags();
+        TagList currTagList;
         if (prevTagList == null) {
-          currTagList = upsertTag(new ArrayList<>(), proposedChange.getTags().getTags().get(0));
+          currTagList = upsertTag(new ArrayList<>(), proposedChange.getTags().getTags().getFirst());
         } else {
-          currTagList = upsertTag(prevTagList.getTags(), proposedChange.getTags().getTags().get(0));
+          currTagList =
+              upsertTag(prevTagList.getTags(), proposedChange.getTags().getTags().getFirst());
         }
 
         // form a properties change.
@@ -138,7 +137,7 @@ public class PropertiesUpdate {
             proposedChange.getTags() != null && proposedChange.getTags().getTags().size() == 1,
             "only a single tag must be present in order to perform delete workflow tag.");
 
-        Tag workflowTag = proposedChange.getTags().getTags().get(0);
+        Tag workflowTag = proposedChange.getTags().getTags().getFirst();
         // remove the tag from the previous workflow tag list if any; otherwise, throw not
         // found exception.
         TagList prevTagList = prevSnapshot.getTags();
@@ -170,9 +169,6 @@ public class PropertiesUpdate {
         Properties currentProperties = prevSnapshot.extractProperties();
 
         // If certain properties are undefined in newly pushed wf definition, reset them
-        if (newProperties.getDescription() == null) {
-          currentProperties.setDescription(null);
-        }
         if (newProperties.getRunStrategy() == null) {
           currentProperties.setRunStrategy(null);
         }
