@@ -38,10 +38,7 @@ import com.netflix.maestro.engine.eval.ParamEvaluator;
 import com.netflix.maestro.engine.execution.RunRequest;
 import com.netflix.maestro.engine.execution.RunResponse;
 import com.netflix.maestro.engine.execution.WorkflowSummary;
-import com.netflix.maestro.engine.jobevents.StartWorkflowJobEvent;
-import com.netflix.maestro.engine.jobevents.WorkflowVersionUpdateJobEvent;
 import com.netflix.maestro.engine.params.ParamsManager;
-import com.netflix.maestro.engine.publisher.MaestroJobEventPublisher;
 import com.netflix.maestro.engine.transformation.DagTranslator;
 import com.netflix.maestro.engine.utils.WorkflowHelper;
 import com.netflix.maestro.engine.validations.DryRunValidator;
@@ -54,6 +51,7 @@ import com.netflix.maestro.models.Defaults;
 import com.netflix.maestro.models.api.WorkflowActionResponse;
 import com.netflix.maestro.models.api.WorkflowCreateRequest;
 import com.netflix.maestro.models.artifact.ForeachArtifact;
+import com.netflix.maestro.models.artifact.WhileArtifact;
 import com.netflix.maestro.models.definition.PropertiesSnapshot;
 import com.netflix.maestro.models.definition.RunStrategy;
 import com.netflix.maestro.models.definition.User;
@@ -73,6 +71,8 @@ import com.netflix.maestro.models.instance.WorkflowInstance;
 import com.netflix.maestro.models.parameter.ParamDefinition;
 import com.netflix.maestro.models.timeline.TimelineEvent;
 import com.netflix.maestro.models.trigger.TriggerUuids;
+import com.netflix.maestro.queue.jobevents.WorkflowVersionUpdateJobEvent;
+import com.netflix.maestro.utils.IdHelper;
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.Collections;
@@ -98,7 +98,6 @@ public class WorkflowActionHandlerTest extends MaestroEngineBaseTest {
   @Mock private ParamEvaluator evaluator;
   @Mock private DryRunValidator dryRunValidator;
   @Mock private MaestroParamExtensionRepo extensionRepo;
-  @Mock private MaestroJobEventPublisher maestroJobEventPublisher;
 
   private WorkflowDefinition definition;
   private WorkflowInstance instance;
@@ -110,9 +109,7 @@ public class WorkflowActionHandlerTest extends MaestroEngineBaseTest {
   public void before() throws Exception {
     ParamsManager paramsManager = mock(ParamsManager.class);
     this.workflowHelper =
-        spy(
-            new WorkflowHelper(
-                paramsManager, evaluator, dagTranslator, extensionRepo, maestroJobEventPublisher));
+        spy(new WorkflowHelper(paramsManager, evaluator, dagTranslator, extensionRepo, 1));
     this.actionHandler =
         new WorkflowActionHandler(
             workflowDao, instanceDao, runStrategyDao, dryRunValidator, this.workflowHelper);
@@ -125,7 +122,7 @@ public class WorkflowActionHandlerTest extends MaestroEngineBaseTest {
             "fixtures/instances/sample-workflow-instance-created.json", WorkflowInstance.class);
     instance.setWorkflowId("sample-minimal-wf");
     when(workflowDao.getWorkflowDefinition("sample-minimal-wf", "active")).thenReturn(definition);
-    when(instanceDao.runWorkflowInstances(any(), any(), anyInt())).thenReturn(Optional.empty());
+    when(instanceDao.runWorkflowInstances(any(), any())).thenReturn(Optional.empty());
     when(runner.start(any())).thenReturn("test-uuid");
   }
 
@@ -379,7 +376,7 @@ public class WorkflowActionHandlerTest extends MaestroEngineBaseTest {
     verify(workflowDao, times(1)).getWorkflowDefinition("sample-minimal-wf", "active");
     verify(runStrategyDao, times(1)).startBatchWithRunStrategy(any(), any(), any());
     assertEquals(2, responses.size());
-    assertEquals(1L, responses.get(0).getWorkflowVersionId());
+    assertEquals(1L, responses.getFirst().getWorkflowVersionId());
     assertEquals("41f0281e-41a2-468d-b830-56141b2f768b", responses.get(0).getWorkflowUuid());
     assertEquals(RunResponse.Status.WORKFLOW_RUN_CREATED, responses.get(0).getStatus());
     assertEquals(1L, responses.get(1).getWorkflowVersionId());
@@ -403,10 +400,9 @@ public class WorkflowActionHandlerTest extends MaestroEngineBaseTest {
             "foreach-step",
             new ForeachArtifact(),
             Collections.singletonList(request),
-            Collections.singletonList(1L),
-            1);
+            Collections.singletonList(1L));
     assertFalse(errors.isPresent());
-    verify(instanceDao, times(1)).runWorkflowInstances(any(), any(), eq(1));
+    verify(instanceDao, times(1)).runWorkflowInstances(any(), any());
   }
 
   @Test
@@ -430,18 +426,17 @@ public class WorkflowActionHandlerTest extends MaestroEngineBaseTest {
             "foreach-step",
             artifact,
             Collections.singletonList(request),
-            Collections.singletonList(5L),
-            1);
+            Collections.singletonList(5L));
     assertFalse(errors.isPresent());
     ArgumentCaptor<List<WorkflowInstance>> captor = ArgumentCaptor.forClass(List.class);
     verify(instanceDao, times(1))
-        .runWorkflowInstances(eq(artifact.getForeachWorkflowId()), captor.capture(), eq(1));
+        .runWorkflowInstances(eq(artifact.getForeachWorkflowId()), captor.capture());
     List<WorkflowInstance> res = captor.getValue();
     assertEquals(1, res.size());
-    assertEquals(artifact.getForeachWorkflowId(), res.get(0).getWorkflowId());
-    assertEquals(5L, res.get(0).getWorkflowInstanceId());
-    assertEquals(3L, res.get(0).getWorkflowRunId());
-    assertEquals(10L, res.get(0).getWorkflowVersionId());
+    assertEquals(artifact.getForeachWorkflowId(), res.getFirst().getWorkflowId());
+    assertEquals(5L, res.getFirst().getWorkflowInstanceId());
+    assertEquals(3L, res.getFirst().getWorkflowRunId());
+    assertEquals(10L, res.getFirst().getWorkflowVersionId());
   }
 
   @Test
@@ -496,11 +491,10 @@ public class WorkflowActionHandlerTest extends MaestroEngineBaseTest {
             "foreach-step",
             artifact,
             Collections.singletonList(runRequest),
-            Collections.singletonList(2L),
-            3);
+            Collections.singletonList(2L));
     assertFalse(errors.isPresent());
 
-    verify(instanceDao, times(1)).runWorkflowInstances(any(), any(), anyInt());
+    verify(instanceDao, times(1)).runWorkflowInstances(any(), any());
 
     ArgumentCaptor<RunRequest> captor = ArgumentCaptor.forClass(RunRequest.class);
     verify(workflowHelper, times(1)).updateWorkflowInstance(any(), captor.capture());
@@ -561,11 +555,10 @@ public class WorkflowActionHandlerTest extends MaestroEngineBaseTest {
             "foreach-step",
             artifact,
             Collections.singletonList(runRequest),
-            Collections.singletonList(2L),
-            3);
+            Collections.singletonList(2L));
     assertFalse(errors.isPresent());
 
-    verify(instanceDao, times(1)).runWorkflowInstances(any(), any(), anyInt());
+    verify(instanceDao, times(1)).runWorkflowInstances(any(), any());
 
     ArgumentCaptor<RunRequest> captor = ArgumentCaptor.forClass(RunRequest.class);
     verify(workflowHelper, times(1)).updateWorkflowInstance(any(), captor.capture());
@@ -622,11 +615,10 @@ public class WorkflowActionHandlerTest extends MaestroEngineBaseTest {
             "foreach-step",
             artifact,
             Collections.singletonList(runRequest),
-            Collections.singletonList(2L),
-            3);
+            Collections.singletonList(2L));
     assertFalse(errors.isPresent());
 
-    verify(instanceDao, times(1)).runWorkflowInstances(any(), any(), anyInt());
+    verify(instanceDao, times(1)).runWorkflowInstances(any(), any());
 
     ArgumentCaptor<RunRequest> captor = ArgumentCaptor.forClass(RunRequest.class);
     verify(workflowHelper, times(1)).updateWorkflowInstance(any(), captor.capture());
@@ -668,7 +660,7 @@ public class WorkflowActionHandlerTest extends MaestroEngineBaseTest {
         actionHandler
             .restartForeachInstance(runRequest, instance, "foreach-step", 100)
             .isPresent());
-    verify(instanceDao, times(1)).runWorkflowInstances(any(), any(), anyInt());
+    verify(instanceDao, times(1)).runWorkflowInstances(any(), any());
     assertEquals(100, instance.getWorkflowRunId());
 
     ArgumentCaptor<RunRequest> captor = ArgumentCaptor.forClass(RunRequest.class);
@@ -777,25 +769,89 @@ public class WorkflowActionHandlerTest extends MaestroEngineBaseTest {
         .thenReturn(10);
     TimelineEvent event = actionHandler.unblock("sample-minimal-wf", tester);
     assertEquals("Unblocked [10] failed workflow instances.", event.getMessage());
-    verify(maestroJobEventPublisher, times(1)).publishOrThrow(any(StartWorkflowJobEvent.class));
+    verify(instanceDao, times(1))
+        .tryUnblockFailedWorkflowInstances(eq("sample-minimal-wf"), anyInt(), any());
   }
 
   @Test
   public void testUnblockReachingLimit() {
     when(instanceDao.tryUnblockFailedWorkflowInstances(eq("sample-minimal-wf"), anyInt(), any()))
-        .thenReturn(Constants.UNBLOCK_BATCH_SIZE)
-        .thenReturn(10);
+        .thenReturn(Constants.UNBLOCK_BATCH_SIZE + 10);
     TimelineEvent event = actionHandler.unblock("sample-minimal-wf", tester);
     assertEquals("Unblocked [110] failed workflow instances.", event.getMessage());
-    verify(maestroJobEventPublisher, times(1)).publishOrThrow(any(StartWorkflowJobEvent.class));
+    verify(instanceDao, times(1))
+        .tryUnblockFailedWorkflowInstances(eq("sample-minimal-wf"), anyInt(), any());
   }
 
   @Test
-  public void testUnblockNothing() {
+  public void testUnblockZero() {
     when(instanceDao.tryUnblockFailedWorkflowInstances(eq("sample-minimal-wf"), anyInt(), any()))
         .thenReturn(0);
     TimelineEvent event = actionHandler.unblock("sample-minimal-wf", tester);
     assertEquals("Unblocked [0] failed workflow instances.", event.getMessage());
-    verify(maestroJobEventPublisher, times(0)).publishOrThrow(any(StartWorkflowJobEvent.class));
+    verify(instanceDao, times(1))
+        .tryUnblockFailedWorkflowInstances(eq("sample-minimal-wf"), anyInt(), any());
+  }
+
+  @Test
+  public void testUnblockNothing() {
+    TimelineEvent event = actionHandler.unblock("maestro_foreach-sample-minimal-wf", tester);
+    assertEquals("Unblocked the workflow.", event.getMessage());
+    verify(instanceDao, times(0)).tryUnblockFailedWorkflowInstances(any(), anyInt(), any());
+  }
+
+  @Test
+  public void testRunInlineWorkflowInstanceFreshRun() {
+    runInlineWorkflowInstance(RunPolicy.START_FRESH_NEW_RUN, 1L, 1L);
+    verify(instanceDao, times(1)).runWorkflowInstances(any(), any());
+    verify(workflowHelper, times(1)).createWorkflowInstance(any(), any(), anyLong(), any(), any());
+  }
+
+  private void runInlineWorkflowInstance(
+      RunPolicy runPolicy, long instanceId, long firstIteration) {
+    WhileArtifact artifact = new WhileArtifact();
+    artifact.setRunPolicy(runPolicy);
+    artifact.setLoopRunId(3L);
+    artifact.setFirstIteration(firstIteration);
+
+    RunRequest request =
+        RunRequest.builder()
+            .initiator(new ManualInitiator())
+            .currentPolicy(runPolicy)
+            .requestId(IdHelper.createUuid("foo"))
+            .build();
+
+    Optional<Details> result =
+        actionHandler.runInlineWorkflowInstance(
+            definition.getWorkflow(),
+            123L,
+            1L,
+            new RunProperties(),
+            "while-step",
+            artifact,
+            request,
+            instanceId);
+    assertFalse(result.isPresent());
+  }
+
+  @Test
+  public void testRunInlineWorkflowInstanceNewIteration() {
+    runInlineWorkflowInstance(RunPolicy.RESTART_FROM_INCOMPLETE, 3L, 1L);
+    verify(instanceDao, times(1)).runWorkflowInstances(any(), any());
+    verify(workflowHelper, times(1)).createWorkflowInstance(any(), any(), anyLong(), any(), any());
+  }
+
+  @Test
+  public void testRunInlineWorkflowInstanceRestart() {
+    doNothing().when(workflowHelper).updateWorkflowInstance(any(), any());
+    when(instanceDao.getWorkflowInstanceRun(anyString(), anyLong(), anyLong()))
+        .thenReturn(instance);
+
+    runInlineWorkflowInstance(RunPolicy.RESTART_FROM_INCOMPLETE, 2L, 2L);
+    verify(instanceDao, times(1)).runWorkflowInstances(any(), any());
+    verify(instanceDao, times(1)).getWorkflowInstanceRun(definition.getWorkflow().getId(), 2L, 2L);
+    verify(workflowHelper, times(1)).updateWorkflowInstance(any(), any());
+    assertEquals(2L, instance.getWorkflowInstanceId());
+    assertEquals(3L, instance.getWorkflowRunId());
   }
 }
